placesDisplay: Prevent bookmarks from being cut off
Moving to St.Table introduced a regression that resulted in the height
of Places section to only depend on the height of the left column.

This could result into some bookmarks not being displayed at all because
there are not enough items in the left column to allocate the needed height.

Fix this by removing the St.BoxLayout actors and add the items directly to
the table.

https://bugzilla.gnome.org/show_bug.cgi?id=614144

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -520,7 +520,7 @@ StTooltip {
 
 .places-section {
     spacing-columns: 4px;
-    spacing-rows: 8px;
+    spacing-rows: 4px;
 }
 
 .places-item-box {
@@ -535,14 +535,6 @@ StTooltip {
 
 .places-item:hover {
     border: 1px solid #666666;
-}
-
-.places-actions {
-    spacing: 2px;
-}
-
-#placesDevices {
-    padding-top: 4px;
 }
 
 /* Recent items */
